Update page.mdx with heading that it's the docs-kpr branch

--- a/src/app/docs/page.mdx
+++ b/src/app/docs/page.mdx
@@ -1,3 +1,5 @@
+# This is the docs-kpr branch for testing the workflow by @kproche
+
 # Getting Started
 
 Welcome to the **KubeStellar Getting Started Guide**! 🚀
