added banner pointing to legacy docs on gh-pages
Signed-off-by: Kevin Roche <kproche@us.ibm.com>

--- a/src/app/docs/page.mdx
+++ b/src/app/docs/page.mdx
@@ -2,6 +2,18 @@
 
 KubeStellar simplifies multi-cluster Kubernetes management, enabling you to deploy and manage workloads across multiple clusters with ease.
 
+## Important note 
+
+<div style={{ display: 'grid', gridTemplateColumns: 'repeat(auto-fit, minmax(300px, 1fr))', gap: '1.5rem', margin: '2rem 0' }}>
+  <div style={{ border: '2px solid #3b82f6', borderRadius: '12px', padding: '1.5rem', background: 'linear-gradient(135deg, rgba(59, 130, 246, 0.1), rgba(147, 51, 234, 0.05))' }}>
+    <h3 style={{ marginTop: 0, color: '#3b82f6', fontSize: '1.25rem' }}>Legacy Documentation</h3>
+    <p style={{ fontSize: '0.9rem', marginBottom: '1rem' }}>If you experience issues with the new Nextra-based site</p>
+    <p> We are aware that some of the imported KubeStellar documentation from our github repositories is not rendering properly 
+        on the new site; in particular some of the mkdocs variables are not being parsed and so code blocks are missing key syntax.</p>
+    <p> <a href="https://kubestellar.github.io/kubestellar/" style={{ display: 'inline-block', padding: '0.5rem 1rem', background: '#3b82f6', color: 'white', borderRadius: '6px', textDecoration: 'none', fontSize: '0.9rem', fontWeight: '500' }}>The Legacy (MKDocs) version of the site may still be viewed via this github-pages linnk.</a></p>
+  </div>
+</div>
+
 ## Choose Your Installation Path
 
 Select the installation path that best fits your needs:
